common/logs/fun_brain_loop.err
python3: can't open file '/root/projects/Bubbles-payload/funpumper/fun_brain_loop': [Errno 2] No such file or directory
  File "/root/projects/Bubbles-payload/funpumper/fun_brain_loop.py", line 25
    pass pass
    ^
IndentationError: expected an indented block after 'with' statement on line 23
  File "/root/projects/Bubbles-payload/funpumper/fun_brain_loop.py", line 6
    pass
IndentationError: unexpected indent
